--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html(lang="en-US", ng-app)
     link(rel="stylesheet", href="/css/bootstrap-responsive.min.css")
     link(rel="stylesheet", href="/css/slider.css")
     link(rel="stylesheet", href="/css/introjs.css")
+    link(rel="stylesheet", href="/css/mediaelementplayer.css")
     link(rel="stylesheet", href="/css/main.css")
 
     script(src="/js/jquery.min.js")
@@ -21,8 +22,11 @@ html(lang="en-US", ng-app)
     script(src="/js/jquery.cookie.js")
     script(src="//www.google.com/jsapi")
     script(src="/js/swfobject.js")
+    script(src="//w.soundcloud.com/player/api.js")
+    script(src="//connect.soundcloud.com/sdk.js")
     script(src="/js/intro.js")
     script(src="/js/sockjs-0.3.min.js")
+    script(src="/js/mediaelement-and-player.min.js")
     script(src="/js/app.js")
 
     base
