--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,11 @@ block content
 
   #stage
     .row-fluid
-      .span3
+      .span3.well
         #current-track
           input(type="hidden", name="current-track-id")
 
-          //h2#track-title #{room.playlist[0].title}
+          //-h2#track-title #{room.playlist[0].title}
           #track-info
             #attribution
               #track-curator.pull-right
@@ -56,18 +56,26 @@ block content
                 span {{track._artist.name}} &mdash; {{track.title}}
 
         h5 Add Track
-        form#search-form.input-append(style="display:block;")
+        form#search-form.input-append(style="display:block;", data-for="track-search")
           if (user)
             input.input-block-level(type="text", placeholder="type here and press [ENTER] to search", data-intro="<h5>Queue a song!</h5>Search here for a track to add it to the playlist.", data-step="2", data-position="right")#search-query
             button.btn(type="submit")
               i.icon-share-alt
           else
             input.input-block-level(type="text", disabled, placeholder="you must be registered to do this!", data-intro="<h5>Queue a song!</h5>Search here for a track to add it to the playlist.", data-step="2", data-position="top")#search-query
-        #search-results
 
       .span6
+        //-#screen-two
+          video(height="300", width="570")
+            source(src=((room.playlist[0].sources.youtube.length) ? '//www.youtube.com/watch?v=' + room.playlist[0].sources.youtube[0].id : '//foo.bar'), type="video/youtube")
+          audio(height="300", width="570")
+            source(src=((room.playlist[0].sources.soundcloud.length) ? '//api.soundcloud.com/tracks/' + room.playlist[0].sources.soundcloud[0].id + '/stream?client_id=' + config.soundcloud.id : '//foo.bar'), type="audio/mpeg")
         #screen-one
           .screen-inner#screen-inner
+          .sound(style="background: black; height: 0; text-align: center; display:none; margin-bottom: 5px;")
+            img(src="http://soundtrack.io/img/laughing-man.png", style="height: 300px;")
+
+          //-iframe#soundcloud-player
         .chat-container
           #messages.fadeout-top
             each message in messages
@@ -89,7 +97,7 @@ block content
         #slot-4
         #slot-5
 
-      .span3(data-intro="<h5>Music is social!</h5>You can chat with all the other listeners here.  They're listening to the same exact music, at the same time!", data-step="4", data-position="left")
+      .span3.well(data-intro="<h5>Music is social!</h5>You can chat with all the other listeners here.  They're listening to the same exact music, at the same time!", data-step="4", data-position="left")
         #audience
           h3 
             small.pull-right.user-count
@@ -152,3 +160,23 @@ block content
         .modal-footer
           button.btn.btn(data-dismiss="modal") Cancel
           button.btn.btn-primary.btn-large(type="submit") Create Playlist &raquo;
+
+    #search-modal.modal.hide.fade
+      .modal-header
+        button.close(data-dismiss="modal") &times;
+        h3 Track Search
+      .modal-body
+        form#search-form.input-append(data-for="track-search")
+          input(type="text", data-for="track-search-query")
+        ul.nav.nav-list.search-results(data-for="track-search-results")
+
+      .modal-footer
+        button.btn.btn(data-dismiss="modal") Cancel
+        button.btn.btn-primary.btn-large(data-dismiss="modal") Done
+
+block scripts
+  script.
+    var soundcloudID = "#{config.soundcloud.id}";
+    SC.initialize({
+      client_id: "#{config.soundcloud.id}"
+    });
