--- a/views/person.jade
+++ b/views/person.jade
@@ -1,7 +1,22 @@
 extends layout
 
 block content
-  h1 #{person.username}
+
+  - if (typeof(user) != 'undefined' && user._id.toString() == person._id.toString())
+    if !person.profiles.lastfm.username
+      a.btn.btn-mini(href="/auth/lastfm")
+
+    a.btn(data-action="enable-profile-editor") EDIT!
+
+    form#profile-editor(action="/#{user.slug}", method="post", style="display:none;")
+      textarea.input-block-level(name="bio", rows="3") #{person.bio}
+      button.btn.btn-primary(type="submit") Make Changes &raquo;
+
+  h1 #{person.username} 
+    if person.profiles.lastfm.username
+      a(href="http://last.fm/user/#{person.profiles.lastfm.username}")
+        img(src="http://last.fm/favicon.ico", title="#{person.profiles.lastfm.username}")
+
   .bio
     | !{marked(person.bio)}
 
@@ -13,9 +28,3 @@ block content
             a(href="/#{person.slug}/#{playlist.slug}") #{playlist.name}
           p #{playlist.description}
 
-    - if (typeof(user) != 'undefined' && user._id.toString() == person._id.toString())
-      a.btn EDIT!
-
-      form(action="/#{user.slug}", method="post")
-        textarea.input-block-level(name="bio", rows="3") #{person.bio}
-        button.btn.btn-primary(type="submit") Make Changes &raquo;
